--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ $font_form=90;
 		<th style='font-size:75%; color:#0059b3; font-weight:bold; border: $bor_menu solid #ddd; padding-bottom:10px;'><input type=submit name=submit value=Submit></th>
 	</table>";
 
-?>
+php?>
 
 </body>
+
 </html>
