--- a/index.html
+++ b/index.html
@@ -30,19 +30,22 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <body>
 	
-<table width=75% align=center bgcolor=white style='border-collapse: collapse; border: 1px solid #ddd; margin-top:105px; font-size:100%; box-shadow: 2px 2px 2px #ddd; border-radius:10px;'>
-	<tr>
-		<th align=center style='border: 0px solid #ddd; padding-top:18px; padding-left:10px;'>
-		<i class='fa fa-bookmark' style='color:#ff9900; padding-left:0px; font-size:100%; text-shadow: 2px 1px 2px #bfbfbf; font-weight:bold;'> &nbsp<font color=black>Input Nomor PA</i></th>
-	<tr>	
-		<th style='border: 0px solid #ddd; padding-top:15px; font-size:100%;'><input class=pa type=text name=pa required></th>
-	<tr>	
-		<th style='font-size:75%; color:#0059b3; font-weight:bold; border: 0px solid #ddd; padding-bottom:10px;'><input type=submit name=submit value=Submit></th>
-</table>
+<form method=GET action=formupload.php>	
+	<table width=75% align=center bgcolor=white style='border-collapse: collapse; border: 1px solid #ddd; margin-top:105px; font-size:100%; box-shadow: 2px 2px 2px #ddd; border-radius:10px;'>
+		<tr>
+			<th align=center style='border: 0px solid #ddd; padding-top:18px; padding-left:10px;'>
+			<i class='fa fa-bookmark' style='color:#ff9900; padding-left:0px; font-size:100%; text-shadow: 2px 1px 2px #bfbfbf; font-weight:bold;'> &nbsp<font color=black>Input Nomor PA</i></th>
+		<tr>	
+			<th style='border: 0px solid #ddd; padding-top:15px; font-size:100%;'><input class=pa type=text name=pa required></th>
+		<tr>	
+			<th style='font-size:75%; color:#0059b3; font-weight:bold; border: 0px solid #ddd; padding-bottom:10px;'><input type=submit name=submit value=Submit></th>
+	</table>
+<form>
 
 </body>
 
 </html>
+
 
 
 
